<resources>
    <string name="app_name">TRAJEKLINE</string>
    <string name="username">Username</string>
    <string name="password">Passwod</string>
    <string name="daftar">Daftar</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="kategori">Kategori</string>
    <string name="cari_wisata">Cari Wisata</string>
    <string name="gunung">Gunung</string>
    <string name="pantai">Pantai</string>
    <string name="taman">Taman Bermain</string>
    <string name="pendidikan">Wisata Pendidikan</string>
    <string name="semua">Semua</string>
    <string name="detail_wisata">Detail Wisata</string>
    <string name="rincian">Rincian</string>
    <string name="fasilitas">FASILITAS</string>
    <string name="makan">KONSUMSI</string>
    <string name="desc">Buat perjalanan terbaikmu dengan kami</string>
    <string name="profil">Profil</string>
    <string name="paket_tour">Paket Tour</string>
    <string name="buat_paket">Buat Paket</string>
    <string name="booking_list">Booking List</string>
    <string name="bantuan">Bantuan</string>
    <string name="simpan">Simpan</string>
    <string name="edit_data_diri">Edit Profil</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="no_telp">No Telp</string>
    <string name="bukti_transfer">Bukti Pembayaran</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="password_konfirmasi">Password Konfirmasi</string>
    <string name="kode_transaksi">Kode Transaksi</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="tanggal_tour">Tanggal Tour</string>
    <string name="nama_paket">Nama Paket</string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="harga_paket">Harga Paket</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="empty_data">DATA KOSONG!</string>
    <string name="empty_data_desc">Data yang anda perlukan tidak tersedia untuk saat ini</string>
    <string name="keluar">Logout</string>
    <string name="tanggal_pesan">Tanggal Pesan</string>
    <string name="tipe_identitas">Tipe Identitas</string>
    <string name="no_identitas">No Identitas</string>
    <string name="no_rek">No Rekening</string>
    <string name="nama_rek">Nama Rekening</string>
    <string name="profil_app_title">Profil Trajekline</string>
    <string name="profil_app_desc">Sumatera Barat adalah salah satu provinsi di Indonesia yang terletak di pulau Sumatera dengan Padang sebagai ibu kotanya. Sesuai dengan namanya, wilayah provinsi ini menempati sepanjang pesisir barat Sumatera bagian tengah dan sejumlah pulau di lepas pantainya seperti Kepulauan Mentawai. Dari utara ke selatan, provinsi dengan wilayah seluas 42.297,30 kmÂ² ini berbatasan dengan empat provinsi, yakni Sumatera Utara, Riau, Jambi, dan Bengkulu. Sumatera Barat berpenduduk sebanyak 4.846.909 jiwa dengan mayoritas beretnis Minangkabau yang seluruhnya beragama Islam. Provinsi ini terdiri dari 12 kabupaten dan 7 kota dengan pembagian wilayah administratif sesudah kecamatan di seluruh kabupaten (kecuali kabupaten Kepulauan Mentawai) dinamakan sebagai nagari.</string>
    <string name="ketentuan_title">Bantuan  Ketentuan Pembookingan</string>
    <string name="ketentuan1">Perubahan Peket dan Penginapan silahkan hubungi contact person kami yang ada pada website, dan hanya bisa dilakukan 5 hari sebelum hari keberangkatan tour. Kurang dari itu perubahan tidak bisa dilakukan.</string>
    <string name="ketentuan2">Pembatalan booking dapat dilakukan 7 hari sebelum tanggal keberangkatan tour yang telah di booking. Biaya yang telah ditranfer akan dikembalikan dengan potongan 10% dari total biaya dan harus melakukan konfirmasi terlebih dahulu melalui contact person kami.</string>
    <string name="ketentuan3">Untuk biaya penginapan yang masih belum terbilang pada saat melakukan pembookingan, akan kami konfirmasikan ke Akun anda 7 hari sebelum hari keberangkatan tour. Dan dapat melakukan cetak tiket setelah hari itu.</string>
    <string name="pembayaran_title">Cara Pembayaran</string>
    <string name="cara_pembayaran">Caraa pembayaran ada 2 alternatif yang bisa dipilih. Pertama anda bisa melakukan pembayaran langsung ke kantor kami atau dengan cara kedua bisa melakukan transfer melalui nomor rekening kami yang tersedia. Dengan ketentuan sebagai berikut :</string>
    <string name="pembayaran1">"1. Pembayaran Langsung "</string>
    <string name="pembayaran2">2. Pembayaran via Transfer</string>
    <string name="pembayaran11">Pembayaran langung dikhususkan untuk pelanggan yang berada dekat dengan kantor kami.</string>
    <string name="pembayaran12">Pembayaran dilakukan 5 hari sebelum keberangkatan.</string>
    <string name="pembayaran13">Syarat pembayaran harus melampirkan Invoice dan Tiket yang telah di booking.</string>
    <string name="pembayaran14">Pembayaran akan dilayani di jam kerja.</string>
    <string name="pembayaran21">Pembayaran ini dimaksudkan untuk pelanggan yang dari luar kota maunpun yang menginginkan proses praktis.</string>
    <string name="pembayaran22">Pembayaran selambat-lambatnya harus telah diterima oleh kami 5 hari sebelum hari keberangkatan tour.</string>
    <string name="pembayaran23">Transfer dapat dilakukan ke nomor rekening berikut :</string>
    <string name="rekening">BCA : 3120618040 a/n Nini Gumaneri, Mandiri : 1110005416478 a/n Nini Gumaneri</string>
    <string name="nama">Nama</string>
    <string name="kota_tujuan">Kota Tujuan</string>
    <string name="jumlah_orang">Jumlah Orang</string>
    <string name="berapa_lama">Berapa Lama Waktu Berlibur ?</string>
    <string name="tanggal_berangkat">Tanggal Berangkat</string>
    <string name="tujuan_wisata">Tujuan Wisata</string>
    <string name="tiket">Sudah memiliki tiket pesawat/kereta ?</string>
    <string name="penginapan">Jenis penginapan yang diinginkan</string>
    <string name="jenis_fasilitas">Jenis Fasilitas</string>
</resources>
